--- a/challenge-01/styles.css
+++ b/challenge-01/styles.css
@@ -48,7 +48,7 @@ p {
 }
 
 .img-hero {
- width: 704px;
+ max-width: 704px;
  height: 407px;
 }
 
@@ -191,4 +191,25 @@ p {
   flex-direction: column;
   gap: 16px;
 }
+
+/* Footer */
+#footer {
+  margin-bottom: 100px;
+  
+}
+
+.group-footer {
+  background-color: #F1F3FF;
+  display: flex;
+  justify-content: space-between;
+}
+
+.list-section {
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  gap: 16px;
+}
+
 
