--- a/challenge-01/styles.css
+++ b/challenge-01/styles.css
@@ -90,6 +90,7 @@ p {
   justify-content: center;
   flex-direction: row;
   gap: 100px;
+  padding: 0;
 }
 
 .container-image-services {
@@ -111,7 +112,6 @@ p {
 /* Why Us */
 
 #why-us {
-  height: 308px;
   margin-bottom: 100px;
 }
 
@@ -119,29 +119,38 @@ p {
   margin-bottom: 16px;
 }
 
-#why-us p {
-  margin-bottom: 40px;
+#why-us  p {
+  margin-bottom: 0px;
 }
 
-.why-us-items {
-  height: 196px;
-  gap: 36px;
- 
+.container-why-us {
+  padding: 0px;
 }
 
-.item {
+.card-container {
+  margin-top: 40px;
+  display: grid;
+  gap: 32px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr))
+}
+
+.card-item {
   padding: 24px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
   gap: 16px;
+  
 }
 
-.item h6{
-  margin: 0;
+.card-item h6 {
+  padding: 0px;
+  margin: 0px;
 }
+
+.card-item p {
+  max-width: 220px;
+}
+
 
 /* Testimonial */
 
@@ -249,6 +258,11 @@ p {
   gap: 16px;
 }
 
+
+
+
+
+
 /* responsive 425px */
 
 @media (max-width:425px) {
@@ -282,5 +296,18 @@ p {
     padding: 0px 54px ;
   }
   
+  /* why us */
 
+  .container-why-us {
+    padding: 0px 16px;
+    
+  }
+
+  .container-why-us h2, .container-why-us > p {
+    text-align: center;
+  }
+
+  .card-container {
+    margin-top: 24px;
+  } 
 }
