--- a/challenge-01/styles.css
+++ b/challenge-01/styles.css
@@ -218,10 +218,11 @@ p {
 
 #getting-started {
   margin-bottom: 100px;
-  height: 326px;
+  padding: 12px;
 }
 
 .getting-started-content {
+  padding: 64px;
   background: var(--primary-blue);
   display: flex;
   flex-direction: column;
@@ -327,7 +328,6 @@ p {
 
   .container-why-us {
     padding: 0px 16px;
-    
   }
 
   .container-why-us h2, .container-why-us > p {
@@ -369,5 +369,14 @@ p {
     height: 48px;
   }
 
+  /* Getting started section */
+  #getting-started {
+    margin-bottom: 60px;
+    padding: 16px;
+  }
+
+  .getting-started-content {
+    text-align: center;
+  }
 
 }
