create responsive footer

--- a/challenge-01/styles.css
+++ b/challenge-01/styles.css
@@ -279,20 +279,44 @@ p {
   
 }
 
-.group-footer {
-  background-color: #F1F3FF;
+.container-footer {
   display: flex;
-  justify-content: space-between;
+  gap: 120px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.contact-footer {
+  max-width: 268px;
 }
 
 .list-section {
   font-size: 14px;
   display: flex;
   flex-direction: column;
-  font-weight: 500;
+  font-weight: 700;
   gap: 16px;
 }
 
+.list-section a {
+  text-decoration: none;
+  color: black;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.social-media p {
+  margin: 0px;
+}
+
+.social-media-icon{
+  display: flex;
+  gap: 16px;
+}
 
 
 
@@ -409,8 +433,11 @@ p {
     padding: 0px 16px;
   }
 
-  
-
-  
-
+  /* footer */
+  .container-footer {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
