--- a/challenge-01/styles.css
+++ b/challenge-01/styles.css
@@ -435,9 +435,7 @@ p {
 
   /* footer */
   .container-footer {
-    display: flex;
     gap: 16px;
-    flex-direction: column;
-    flex-wrap: wrap;
+    padding: 0px 16px;
   }
 }
