--- a/challenge-01/styles.css
+++ b/challenge-01/styles.css
@@ -283,6 +283,10 @@ max-width:1440px ;
   gap: 16px;
 }
 
+.accordion {
+  -bs-accordion-border-width: none
+}
+
 .accordion-button {
   gap: 5px;
   }
