--- a/challenge-02/filter-car-challenge/public/css/styles.css
+++ b/challenge-02/filter-car-challenge/public/css/styles.css
@@ -24,6 +24,15 @@ p {
   font-size: 14px;
 }
 
+.modal-custom {
+  display: none;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  background: rgba(0, 0, 0, .5);
+}
+
 /* Navbar */
 
 .nav {
@@ -111,6 +120,7 @@ max-width:1440px ;
   gap: 16px;
   padding: 24px;
   border-radius: 8px;
+  z-index: 1;
 }
 
 .input-item {
@@ -129,8 +139,6 @@ label, ::placeholder, select,option,input {
 select,option,input {
   padding: 10px;
 }
-
-
 
 
 /* footer */
