--- a/challenge-02/filter-car-challenge/public/css/filterPage.css
+++ b/challenge-02/filter-car-challenge/public/css/filterPage.css
@@ -134,6 +134,7 @@ label, ::placeholder, select,option,input {
   font-size: 12px;
   padding: 0px 4px;
   color: #5b5b5b;
+  cursor: pointer;
 }
 
 select,option,input {
