--- a/challenge-02/filter-car-challenge/public/css/filterPage.css
+++ b/challenge-02/filter-car-challenge/public/css/filterPage.css
@@ -167,6 +167,28 @@ select,option,input {
   padding: 10px;
 }
 
+/* cars section */
+.container-cars {
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(333px,1fr));
+  gap: 24px;
+  margin-bottom: 100px;
+}
+
+.card-cars {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  border: 1px solid #cccccc;
+  border-radius: 8px;
+}
+
+.card-cars img {
+  width: 100%;
+height: 222px;
+object-fit: cover;
+}
+
 
 /* footer */
 #footer {
