--- a/challenge-02/filter-car-challenge/public/css/filterPage.css
+++ b/challenge-02/filter-car-challenge/public/css/filterPage.css
@@ -63,8 +63,6 @@ p {
 .btn-success {
   --bs-btn-bg : var(--btn-prim-color);
   --bs-btn-border-color: var(--btn-prim-color);
-  --bs-btn-hover-bg:var(--btn-prim-color);
-  --bs-btn-hover-border-color:var(--btn-prim-color);
   --bs-btn-active-bg:var(--btn-prim-color);
   --bs-btn-active-border-color:var(--btn-prim-color);
   --bs-btn-disabled-bg:var(--btn-prim-color);
@@ -178,6 +176,9 @@ select,option,input {
 .card-cars {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+  height: 100%;
   padding: 24px;
   border: 1px solid #cccccc;
   border-radius: 8px;
@@ -187,6 +188,17 @@ select,option,input {
   width: 100%;
 height: 222px;
 object-fit: cover;
+}
+
+.card-icons {
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+}
+
+span {
+  font-size: 14px;
+  margin-left: 4px;
 }
 
 
@@ -303,4 +315,29 @@ object-fit: cover;
   .container-image-hero {
     padding-left: 16px;
   }
+
+ 
 }
+
+@media (max-width:320px) {
+
+  p,span {
+    font-size: 12px;
+  }
+
+  /* bootstrap className */
+  .btn {
+    font-size: 14px;
+  }
+  .nav-link {
+    font-size: 14px;
+  }
+
+  .container-cars {
+    grid-template-columns: repeat(auto-fill,minmax(150px,1fr));
+    
+  }
+
+
+}
+
