add responsive in filter page

--- a/challenge-02/filter-car-challenge/public/css/filterPage.css
+++ b/challenge-02/filter-car-challenge/public/css/filterPage.css
@@ -106,6 +106,10 @@ max-width:1440px ;
 }
 
 /* form */
+#form {
+  padding: 0;
+}
+
 .container-input {
   display: flex;
   flex-wrap: wrap;
@@ -122,7 +126,7 @@ max-width:1440px ;
 }
 
 .input-item {
-  flex-grow: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 4px;
@@ -287,12 +291,25 @@ span {
     max-width: 400px;
     margin: auto;
   }
+  .container-input {
+    position: relative;
+    bottom: 50px;
+    z-index: 1;
+  }
+
+
+  .input-item {
+    flex: none;
+    flex-grow: 2;
+    
+  }
 
 }
 
 
 /* responsive 425px mobile large*/
 @media (max-width:576px) {
+
 
   /* navbar */
   .container-nav {
@@ -301,7 +318,7 @@ span {
   
   /* hero section */
   #hero {
-    margin-bottom: 60px;
+    margin-bottom: 40px;
   }
 
   .text-hero {
@@ -316,6 +333,15 @@ span {
     padding-left: 16px;
   }
 
+  #form {
+    padding: 0 12px;
+    margin-bottom: 40px;
+  }
+  .container-input {
+    position: relative;
+    top: 0;
+    z-index: 1;
+  }
  
 }
 
