add class container button

--- a/challenge-02/filter-car-challenge/public/css/filterPage.css
+++ b/challenge-02/filter-car-challenge/public/css/filterPage.css
@@ -169,6 +169,12 @@ select,option,input {
   padding: 10px;
 }
 
+.container-btn {
+  display: flex;
+  align-items: end;
+}
+
+
 /* cars section */
 .container-cars {
   display: grid;
