create cars detail page

--- a/challenge-06/src/app/globals.css
+++ b/challenge-06/src/app/globals.css
@@ -90,3 +90,11 @@ header {
 .btn-next {
   @apply p-1 cursor-pointer;
 }
+
+.form-shadow {
+  box-shadow: 0px 0px 10px 0px #00000026;
+}
+
+form {
+  z-index: 99;
+}
